fix work item overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* stylelint-disable */
 /* stylelint-enable */
 .hidden {
@@ -205,8 +204,7 @@ p {
     pointer-events: none;
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
-    -webkit-backdrop-filter: blur(1px);
-            backdrop-filter: blur(1px);
+    backdrop-filter: blur(1px);
   }
 }
 @media screen and (min-width: 992px) and (prefers-color-scheme: dark) {
@@ -2220,7 +2218,6 @@ a.btn .btn__label {
 }
 .card--work-item .card__img {
   position: relative;
-  overflow: hidden; /* <– prevents image from leaving the card */
 }
 .card--work-item img {
   width: 100%;
@@ -2230,7 +2227,6 @@ a.btn .btn__label {
   -o-object-position: center;
      object-position: center;
   display: block;
-  will-change: transform; /* better performance */
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
